@@ -21,7 +21,7 @@ static const struct {
   { 16, -32767, "-111111111111111" },
   { 18, -65536, "-10000000000000000" },
   { 32, -1234567890, "-1001001100101100000001011010010" },
-  { 33, -0xFFFFFFFF, "-11111111111111111111111111111111" },
+  { 33, -0xFFFFFFFFL, "-11111111111111111111111111111111" },
   { 8, -123, "-1111011 111001000" },
 
   { 0, 0, "2" },
