@@ -25,7 +25,7 @@ static const struct {
   { 9, -255, "-11111111" },
   { 16, -32767, "-111111111111111" },
   { 18, -65536, "-10000000000000000" },
-  { 32, -1234567890, "-1001001100101100000001011010010" },
+  { 32, -1234567890L, "-1001001100101100000001011010010" },
   { 32, -0x7FFFFFFFLL, "-1111111111111111111111111111111" },
   { 64, -0x7FFFFFFFFFFFFFFFLL, "-111111111111111111111111111111111111111111111111111111111111111" },
   { 8, -123, "-1111011 111001000" },
