@@ -10,18 +10,18 @@ static const struct {
   long long num;
   const char *str;
 } tests[] = {
-  { 1, 0U, "0" },
-  { 1, 1U, "1" },
-  { 3, 0255U, "255" },
-  { 5, 032767U, "32767" },
-  { 5, 065536U, "65536" },
-  { 7, 01234567U, "1234567" },
-  { 11, 037777777777U, "37777777777" },
-  { 22, 02000000000000000000000U, "2000000000000000000000" },
+  { 1, 0, "0" },
+  { 1, 1, "1" },
+  { 3, 0255, "255" },
+  { 5, 032767, "32767" },
+  { 5, 065536, "65536" },
+  { 7, 01234567, "1234567" },
+  { 11, 037777777777LL, "37777777777" },
+  { 22, 02000000000000000000000LL, "2000000000000000000000" },
   { 3, 0123, "123 456" },
   { 0, 0, "8" },
   { 0, 0, "9" },
-  { 0, 0, "-" },
+  { 1, 0, "-" },
 };
 
 int main(void)
