@@ -21,7 +21,7 @@ static const struct {
   { 6, -032767, "-32767" },
   { 6, -065536, "-65536" },
   { 8, -01234567, "-1234567" },
-  { 12, -037777777777, "-37777777777" },
+  { 12, -037777777777L, "-37777777777" },
   { 4, -0123, "-123 456" },
 
   { 0, 0, "8" },
