@@ -289,3 +289,5 @@
                cross compilation.
 20070615 code: updated to new cpj tool and new sysdeps.
 20070615 version: 0.561
+20070617 code: strange bug related to large signed constants on IA64.
+               -0xffffffff == 1, -0xffffffffL == -0xffffffff.
